deployments/base/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
    - host: cgadm.local
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-web-front
              servicePort: 80
          - path: /v1
            backend:
              serviceName: svc-adm
              servicePort: 31000
    - host: cg.local
      http:
        paths:
          - path: /
            backend:
              serviceName: svc-web-front
              servicePort: 80
          - path: /v1
            backend:
              serviceName: svc-ctm
              servicePort: 31000
